<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include layout="@layout/layout_actionbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_changeUserInfo_warpper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_changeUserInfo_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_changeUserInfo_name"
                android:imeOptions="actionUnspecified"
                android:textSize="@dimen/text_size_default"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_changeUserInfo_warpper_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_changeUserInfo_et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_changeUserInfo_age"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="@dimen/text_size_default"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/activity_changeUserInfo_rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <RadioButton
                android:id="@+id/activity_changeUserInfo_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:checked="true"
                android:text="@string/activity_changeUserInfo_male"
                android:textSize="@dimen/text_size_default"/>

            <RadioButton
                android:id="@+id/activity_changeUserInfo_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/color_black"
                android:text="@string/activity_changeUserInfo_female"
                android:textSize="@dimen/text_size_default"/>

        </RadioGroup>

        <com.dd.CircularProgressButton
            android:id="@+id/activity_changeUserInfo_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_default"
            app:cpb_selectorIdle="@color/color_black"
            app:cpb_selectorComplete="@color/color_black"
            app:cpb_colorIndicatorBackground="@color/color_white"
            app:cpb_colorIndicator="@color/color_black"
            app:cpb_selectorError="@color/color_black"
            app:cpb_cornerRadius="12dp"
            app:cpb_textComplete="@string/activity_changeUserInfo_success"
            app:cpb_textError="@string/activity_changeUserInfo_fail"
            app:cpb_textIdle="@string/activity_changeUserInfo_submit" />
    </LinearLayout>
</LinearLayout>
