<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_actionbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_friends_warpper_imAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/activity_add_friends_et_imAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_add_friends_imAccount"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_friends_warpper_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/activity_add_friends_et_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_add_friends_reason"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/activity_add_friends_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:cpb_colorIndicator="@color/color_black"
        app:cpb_colorIndicatorBackground="@color/color_white"
        app:cpb_cornerRadius="12dp"
        app:cpb_selectorComplete="@color/color_black"
        app:cpb_selectorError="@color/color_black"
        app:cpb_selectorIdle="@color/color_black"
        app:cpb_textComplete="@string/activity_add_friends_success"
        app:cpb_textError="@string/activity_add_friends_fail"
        app:cpb_textIdle="@string/activity_add_friends_submit" />
</LinearLayout>
