<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_actionbar" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/activity_update_car_iv_car"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- 车型 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_update_car_warpper_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/activity_update_car_et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_update_car_type"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- 车牌号 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_update_car_warpper_licenseNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/activity_update_car_et_licenseNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_update_car_licenseNum"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/activity_update_car_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:cpb_colorIndicator="@color/color_black"
        app:cpb_colorIndicatorBackground="@color/color_white"
        app:cpb_cornerRadius="12dp"
        app:cpb_selectorComplete="@color/color_black"
        app:cpb_selectorError="@color/color_black"
        app:cpb_selectorIdle="@color/color_black"
        app:cpb_textComplete="@string/activity_update_car_success"
        app:cpb_textError="@string/activity_update_car_fail"
        app:cpb_textIdle="@string/activity_update_car_submit" />
</LinearLayout>
