<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/activity_record_list_item_iv_car"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:text="@string/activity_record_time" />

            <TextView
                android:id="@+id/activity_record_list_item_tv_time"
                android:textColor="@color/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:text="@string/activity_record_fee" />

            <TextView
                android:id="@+id/activity_record_list_item_tv_fee"
                android:textColor="@color/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:text="@string/activity_record_type" />

            <TextView
                android:id="@+id/activity_record_list_item_tv_type"
                android:textColor="@color/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/color_black"
                android:layout_height="wrap_content"
                android:text="@string/activity_record_licenseNum" />

            <TextView
                android:id="@+id/activity_record_list_item_tv_licenseNum"
                android:layout_width="wrap_content"
                android:textColor="@color/color_black"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>