<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.chooseSpace.ChooseSpaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/activity_chooseSpace_layout_actionbar"
            layout="@layout/layout_actionbar" />

        <TextView
            android:id="@+id/activity_chooseSpace_tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_chooseSpace_layout_actionbar"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/activity_chooseSpace_choose"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_big" />

        <ImageView
            android:id="@+id/activity_chooseSpace_iv_border"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/activity_chooseSpace_tv_choose"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/color_border"
            android:clickable="true" />

        <com.fyf.parkinglot.view.MyGridView
            android:id="@+id/activity_chooseSpace_gv_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_chooseSpace_iv_border"
            android:layout_margin="@dimen/activity_horizontal_margin" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_chooseSpace_gv_space"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_chooseSpace_iv_used"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/frame_parking_space_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/activity_chooseSpace_used"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_default" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_chooseSpace_iv_notUsed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/frame_parking_space_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/activity_chooseSpace_notUsed"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_default" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_chooseSpace_iv_mine"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/frame_parking_space_cyan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/activity_chooseSpace_mine"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_default" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>